--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="Tom Heine" content="TheNorthFace">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<title>The North Face</title>
-	
+
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/The-North-Face-Logo-Geen-Naam.png">
+	<link rel="icon" type="image/svg+xml" href="../images/The-North-Face-Logo-Geen-Naam.png">
 </head>
 
 <body>
 	<header>
-		<a href="index.html"><img src="/images/The-North-Face-Logo-wit.png" alt="TheNorthFace_Logo_wit"></a>
-        <nav>
+		<h1>TheNorthFace</h1>
+		<nav>
 			<ul>
-                <li><a href="index.html">NL</a></li>
-                <li><a href="index.html">Bestelstatus</a></li>
-                <li><a href="index.html">Xplr Pass</a></li>
-                <li><a href="index.html">Vind een winkel</a></li>
+				<li><a href="index.html">NL</a></li>
+				<li><a href="index.html">Bestelstatus</a></li>
+				<li><a href="index.html">Xplr Pass</a></li>
+				<li><a href="index.html">Vind een winkel</a></li>
 				<li><a href="index.html">Hulp</a></li>
 				<li><a href="index.html">Digitale Cadeaubonnen</a></li>
 				<li><a href="index.html">Favorieten</a></li>
 				<li><a href="index.html">Inloggen</a></li>
 			</ul>
 			<!--bovenste nav-->
-            <ul>
-                <li><a href="index.html">Heren</a></li>
-                <li><a href="index.html">Dames</a></li>
-                <li><a href="index.html">Kinderen</a></li>
-                <li><a href="index.html">Schoenen</a></li>
+			<ul>
+				<li><a href="index.html"><img src="../images/The-North-Face-Logo-wit.png" alt="TheNorthFace-Logo in het wit"></a></li>
+				<li><a href="index.html">Heren</a></li>
+				<li><a href="index.html">Dames</a></li>
+				<li><a href="index.html">Kinderen</a></li>
+				<li><a href="index.html">Schoenen</a></li>
 				<li><a href="index.html">Tassen & Uitrusting</a></li>
 				<li><a href="index.html">Outlet</a></li>
 				<li><a href="index.html">Verken</a></li>
@@ -45,83 +46,86 @@
 					</form>
 					<!--de searchbar-->
 				</li>
-				<li><a href="index.html"><img src="/images/shopping-bag.png" alt="Winkelwagen"></a></li>
+				<li><a href="index.html"><img src="../images/shopping-bag.png" alt="Winkelwagen icoon"></a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-	<article><a href="index.html">
-		<img src="/images/The-North-Face-Logo-wit.png" alt="sneeuwende_berg">
-	</a>
-		<!--Achtergrond img (nog gevonden worden)-->
-		<h2>Black Friday-vroege toegang is begonnen: krijg 30% korting op elke bestelling</h2>
-		<p>Alleen voor XPLR Pass-leden.</p>
-		<a href="index.html">Schrijf je in</a>
-		<a href="index.html">Meld je aan</a>
-	
-	</article>
-	<!--black friday promotie-->
-	<article><a href="index.html">
-		<img src="/images/The-North-Face-Logo-wit.png" alt="scheur_berg">
-	</a>
-		<!--Achtergrond img (moet nog gevonden worden)-->
-		<h2>Geef exploratie cadeau</h2>
-		<a href="index.html">Gids voor cadeaushoppen</a>
-		<img src="/images/The-North-Face-Logo-wit.png" alt="product_gif">
-			<!--Moet nog even kijken hoe ik dit doe (wss met gifje) anders iets van javascript-->
+		<section>
+			<h2>Black Friday-vroege toegang is begonnen: krijg 30% korting op elke bestelling</h2>
+			<a href="index.html">
+				<img src="../images/zwartwitberg.png" alt="een witte sneeuwende berg met een zwarte achtergrond">
+			</a>
+			<!--Achtergrond img (nog gevonden worden)-->
+			<p>Alleen voor XPLR Pass-leden.</p>
+			<a href="index.html">Schrijf je in</a>
+			<a href="index.html">Meld je aan</a>
 
-	</article>
-	<!--cadeau shoppen-->
-	<article><a href="index.html">
-		<img src="/images/The-North-Face-Logo-wit.png" alt="skiënde_man_in_berg">
-	</a>
-		<!--Achtergrond img (nog gevonden worden)-->
-		<h2>Blijf warm en droog, van piste tot park.</h2>
-		<a href="index.html">Shop heren</a>
-		<a href="index.html">Shop dames</a>
-	
-	</article>
-	<ul>
-		<li>
-			<img src="/images/The-North-Face-Logo-wit.png" alt="duffle_bag">
-			<!--boven img (nog gevonden worden)-->
-			<h3>Start elke reis met een reistas.</h3>
-			<a href="index.html">Shop nu</a>
-		</li>
-		<li>
-			<img src="/images/The-North-Face-Logo-wit.png" alt="groep_met_warme_jassen">
-			<!--boven img (nog gevonden worden)-->
-			<h3>Heerlijk warm met geïsoleerde jassen.</h3>
+		</section>
+		<!--black friday promotie-->
+		<section>
+			<h2>Geef exploratie cadeau</h2>
+			<a href="index.html">
+				<video width="320" height="240" controls>
+					<source src="../thenorthface/images/mainbannerfilmpje.webm" type="video/webm">
+					<source src="movie.ogg" type="video/ogg">
+				  </video>
+			</a>
+			<!--Achtergrond img (moet nog gevonden worden)-->
+			<a href="index.html">Gids voor cadeaushoppen</a>
+		</section>
+		<!--cadeau shoppen-->
+		<section>
+			<h2>Blijf warm en droog, van piste tot park.</h2>
+				<a href="index.html">
+					<img src="../images/skier.png" alt="skiënde man in berg die off-piste skied">
+				</a>
+			<!--Achtergrond img (nog gevonden worden)-->
 			<a href="index.html">Shop heren</a>
 			<a href="index.html">Shop dames</a>
+
+		</section>
+		<ul>
+			<li>
+				<h3>Start elke reis met een reistas.</h3>
+				<img src="../images/dufflebag.png" alt="duffle bag op een bankje met een stenen muur erachter">
+				<!--boven img (nog gevonden worden)-->
+				<a href="index.html">Shop nu</a>
+			</li>
+			<li>
+				<h3>Heerlijk warm met geïsoleerde jassen.</h3>
+				<img src="../images/groepinjassenlopen.png" alt="een groep blije mensen met warme jassen aan ">
+				<!--boven img (nog gevonden worden)-->
+				<a href="index.html">Shop heren</a>
+				<a href="index.html">Shop dames</a>
+			</li>
+		</ul>
+		<ul>
+			<li>
+				
+				<img src="../images/roodblauwtrui.png" alt="rood+blauw trui">
+				<!--boven img (nog gevonden worden)-->
+				<a href="index.html">Cadeaus voor hem</a>
+			
 		</li>
-	</ul>
-	<ul>
-		<li>
-			<img src="/images/The-North-Face-Logo-wit.png" alt="rood+blauw_trui">
-			<!--boven img (nog gevonden worden)-->
-			<a href="index.html">Cadeaus voor hem</a>
-		</li>
-		<li>
-			<img src="/images/The-North-Face-Logo-wit.png" alt="roze+bruin_trui">
-			<!--boven img (nog gevonden worden)-->
-			<a href="index.html">Cadeaus voor haar</a>
-		</li>
-		<li>
-			<img src="/images/The-North-Face-Logo-wit.png" alt="rode_kinder_jas">
-			<!--boven img (nog gevonden worden)-->
-			<a href="index.html">Cadeaus voor kinderen</a>
-		</li>
-		<li>
-			<img src="/images/The-North-Face-Logo-wit.png" alt="beige_tas">
-			<!--boven img (nog gevonden worden)-->
-			<a href="index.html">Een leuk cadeau</a>
-		</li>
-	</ul>
+			<li>
+				<img src="../images/rozebruintrui.png" alt="roze+bruin trui">
+				<!--boven img (nog gevonden worden)-->
+				<a href="index.html">Cadeaus voor haar</a>
+			</li>
+			<li>
+				<img src="../images/zwartroodjas.png" alt="rode kinder jas">
+				<!--boven img (nog gevonden worden)-->
+				<a href="index.html">Cadeaus voor kinderen</a>
+			</li>
+			<li>
+				<img src="../images/beigerugtas.png" alt="beige rugzak">
+				<!--boven img (nog gevonden worden)-->
+				<a href="index.html">Een leuk cadeau</a>
+			</li>
+		</ul>
 	</main>
-	<script defer src="scripts/script.js"></script>
-</body>
-<footer>
+	<footer>
 		<ul>
 			<li>
 				<h4>Word lid van XPLR Pass</h4>
@@ -129,72 +133,87 @@
 				<a href="index.html">Word lid nu</a>
 			</li>
 		</ul>
-			<ul>
-				<li>WINKELEN</li>
-				<li>Heren</li>
-				<li>Dames</li>
-				<li>Kids</li>
-				<li>Tassen & Uitrusting</li>
-				<li>Schoenen</li>
-			</ul>
-			<ul>
-				<li>BESTELLINGEN</li>
-				<li>Track jouw Order</li>
-				<li>Verzending</li>
-				<li>Retourneren</li>
-				<li>Korting voor studenten</li>
-			</ul>
-			<ul>
-				<li>HELP</li>
-				<li>Contact</li>
-				<li>Veelgestelde Vragen</li>
-				<li>Garantie</li>
-				<li>Gebruiksvoorwaarden</li>
-				<li>Privacybeleid</li>
-				<li>Maattabellen</li>
-				<li>Cookievoorkeuren</li>
-				<li>Conformiteitsverklaring</li>
-			</ul>
-			<ul>
-				<li>OVER ONS</li>
-				<li>Onze Geschiedenis</li>
-				<li>Duurzaamheid</li>
-				<li>Sporters</li>
-				<li>Technologie</li>
-				<li>Word Lid Van XPLR Pass</li>
-				<li>The North Face Pro Programme</li>
-				<li>Werken Bij The North Face</li>
-			</ul>
-	<ul>
-		<li><section>
-			<h4>Abonneer u op onze nieuwsbrief</h4>
-			<p>Ontvang productnieuws en updates in je inbox</p>
-			<form>
-				<label for="emailadres">
-					E-mailadres
-					<input type="text" id="emailadres">
-				</label>
-			</form>
-			<label for="terms">
-				<input type="checkbox" id="terms" value="terms">
-				Ik bevestig dat ik het <a href="index.html">privacybeleid</a> heb gelezen en begrepen en ik geef toestemming voor de verwerking van mijn persoonlijke gegevens voor marketing- en profileringsdoeleinden.* 
-			</label>
-			<a href="index.html">Schrijf Je In</a>
-		</section></li>
-	<li><section>
-		<h4>Vind een winkel</h4>
-		<p>Vind een The North Face-winkel in de buurt</p>
-		<a href="index.html">Zoek winkel</a>
-	</section></li>
-	<li><section>
-		<h4>Volg The North Face</h4>
 		<ul>
-			<li><a href="https://www.facebook.com/thenorthface/"><img src="/images/facebook-icon.png" alt="Winkelwagen"></a></li>
-			<li><a href="https://www.instagram.com/thenorthface/"><img src="/images/instagram-icon.png" alt="Winkelwagen"></a></li>
-			<li><a href="https://x.com/TheNorthFace?mx=2"><img src="/images/twitter-icon.png" alt="Winkelwagen"></a></li>
-			<li><a href="https://www.youtube.com/c/TheNorthFace"><img src="/images/youtube-icon.png" alt="Winkelwagen"></a></li>
+			<li>WINKELEN</li>
+			<li>Heren</li>
+			<li>Dames</li>
+			<li>Kids</li>
+			<li>Tassen & Uitrusting</li>
+			<li>Schoenen</li>
 		</ul>
-	</section></li>
-	</ul>
-</footer>
+		<ul>
+			<li><a href="#">BESTELLINGEN</a></li>
+			<li><a href="#">Track jouw Order</a></li>
+			<li><a href="#">Verzending</a></li>
+			<li><a href="#">Retourneren</a></li>
+			<li><a href="#">Korting voor studenten</a></li>
+		</ul>
+		<ul>
+			<li><a href="#">HELP</a></li>
+			<li><a href="#">Contact</a></li>
+			<li><a href="#">Veelgestelde Vragen</a></li>
+			<li><a href="#">Garantie</a></li>
+			<li><a href="#">Gebruiksvoorwaarden</a></li>
+			<li><a href="#">Privacybeleid</a></li>
+			<li><a href="#">Maattabellen</a></li>
+			<li><a href="#">Cookievoorkeuren</a></li>
+			<li><a href="#">Conformiteitsverklaring</a></li>
+		</ul>
+		<ul>
+			<li><a href="#">OVER ONS</a></li>
+			<li><a href="#">Onze Geschiedenis</a></li>
+			<li><a href="#">Duurzaamheid</a></li>
+			<li><a href="#">Sporters</a></li>
+			<li><a href="#">Technologie</a></li>
+			<li><a href="#">Word Lid Van XPLR Pass</a></li>
+			<li><a href="#">The North Face Pro Programme</a></li>
+			<li><a href="#">Werken Bij The North Face</a></li>
+		</ul>
+		<ul>
+			<li>
+				<section>
+					<h4>Abonneer u op onze nieuwsbrief</h4>
+					<p>Ontvang productnieuws en updates in je inbox</p>
+					<form>
+						<label for="emailadres">
+							E-mailadres
+							<input type="email" id="emailadres">
+						</label>
+					</form>
+					<label for="terms">
+						<input type="checkbox" id="terms" value="terms">
+						Ik bevestig dat ik het <a href="index.html">privacybeleid</a> heb gelezen en begrepen en ik geef
+						toestemming voor de verwerking van mijn persoonlijke gegevens voor marketing- en
+						profileringsdoeleinden.*
+					</label>
+					<a href="index.html">Schrijf Je In</a>
+				</section>
+			</li>
+			<li>
+				<section>
+					<h4>Vind een winkel</h4>
+					<p>Vind een The North Face-winkel in de buurt</p>
+					<a href="index.html">Zoek winkel</a>
+				</section>
+			</li>
+			<li>
+				<section>
+					<h4>Volg The North Face</h4>
+					<ul>
+						<li><a href="https://www.facebook.com/thenorthface/"><img src="../images/facebook-icon.png"
+									alt="Winkelwagen"></a></li>
+						<li><a href="https://www.instagram.com/thenorthface/"><img src="../images/instagram-icon.png"
+									alt="Winkelwagen"></a></li>
+						<li><a href="https://x.com/TheNorthFace?mx=2"><img src="../images/twitter-icon.png"
+									alt="Winkelwagen"></a></li>
+						<li><a href="https://www.youtube.com/c/TheNorthFace"><img src="../images/youtube-icon.png"
+									alt="Winkelwagen"></a></li>
+					</ul>
+				</section>
+			</li>
+		</ul>
+	</footer>
+	<script defer src="scripts/script.js"></script>
+</body>
+
 </html>
