--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>The North Face</title>
 
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="../images/The-North-Face-Logo-Geen-Naam.png">
+	<link rel="icon" type="image/svg+xml" href="./images/The-North-Face-Logo-Geen-Naam.png">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 			</ul>
 			<!--bovenste nav-->
 			<ul>
-				<li><a href="index.html"><img src="../images/The-North-Face-Logo-wit.png" alt="TheNorthFace-Logo in het wit"></a></li>
+				<li><a href="index.html"><img src="./images/The-North-Face-Logo-wit.png" alt="TheNorthFace-Logo in het wit"></a></li>
 				<li><a href="index.html">Heren</a></li>
 				<li><a href="index.html">Dames</a></li>
 				<li><a href="index.html">Kinderen</a></li>
@@ -46,7 +46,7 @@
 					</form>
 					<!--de searchbar-->
 				</li>
-				<li><a href="index.html"><img src="../images/shopping-bag.png" alt="Winkelwagen icoon"></a></li>
+				<li><a href="index.html"><img src="./images/shopping-bag.png" alt="Winkelwagen icoon"></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -54,9 +54,9 @@
 		<section>
 			<h2>Black Friday-vroege toegang is begonnen: krijg 30% korting op elke bestelling</h2>
 			<a href="index.html">
-				<img src="../images/zwartwitberg.png" alt="een witte sneeuwende berg met een zwarte achtergrond">
+				<img src="./images/zwartwitberg.png" alt="een witte sneeuwende berg met een zwarte achtergrond">
 			</a>
-			<!--Achtergrond img (nog gevonden worden)-->
+
 			<p>Alleen voor XPLR Pass-leden.</p>
 			<a href="index.html">Schrijf je in</a>
 			<a href="index.html">Meld je aan</a>
@@ -67,7 +67,7 @@
 			<h2>Geef exploratie cadeau</h2>
 			<a href="index.html">
 				<video width="320" height="240" controls>
-					<source src="../thenorthface/images/mainbannerfilmpje.webm" type="video/webm">
+					<source src="./thenorthface/images/mainbannerfilmpje.webm" type="video/webm">
 					<source src="movie.ogg" type="video/ogg">
 				  </video>
 			</a>
@@ -78,7 +78,7 @@
 		<section>
 			<h2>Blijf warm en droog, van piste tot park.</h2>
 				<a href="index.html">
-					<img src="../images/skier.png" alt="skiënde man in berg die off-piste skied">
+					<img src="./images/skier.png" alt="skiënde man in berg die off-piste skied">
 				</a>
 			<!--Achtergrond img (nog gevonden worden)-->
 			<a href="index.html">Shop heren</a>
@@ -88,13 +88,13 @@
 		<ul>
 			<li>
 				<h3>Start elke reis met een reistas.</h3>
-				<img src="../images/dufflebag.png" alt="duffle bag op een bankje met een stenen muur erachter">
+				<img src="./images/dufflebag.png" alt="duffle bag op een bankje met een stenen muur erachter">
 				<!--boven img (nog gevonden worden)-->
 				<a href="index.html">Shop nu</a>
 			</li>
 			<li>
 				<h3>Heerlijk warm met geïsoleerde jassen.</h3>
-				<img src="../images/groepinjassenlopen.png" alt="een groep blije mensen met warme jassen aan ">
+				<img src="./images/groepinjassenlopen.png" alt="een groep blije mensen met warme jassen aan ">
 				<!--boven img (nog gevonden worden)-->
 				<a href="index.html">Shop heren</a>
 				<a href="index.html">Shop dames</a>
@@ -103,23 +103,23 @@
 		<ul>
 			<li>
 				
-				<img src="../images/roodblauwtrui.png" alt="rood+blauw trui">
+				<img src="./images/roodblauwtrui.png" alt="rood+blauw trui">
 				<!--boven img (nog gevonden worden)-->
 				<a href="index.html">Cadeaus voor hem</a>
 			
 		</li>
 			<li>
-				<img src="../images/rozebruintrui.png" alt="roze+bruin trui">
+				<img src="./images/rozebruintrui.png" alt="roze+bruin trui">
 				<!--boven img (nog gevonden worden)-->
 				<a href="index.html">Cadeaus voor haar</a>
 			</li>
 			<li>
-				<img src="../images/zwartroodjas.png" alt="rode kinder jas">
+				<img src="./images/zwartroodjas.png" alt="rode kinder jas">
 				<!--boven img (nog gevonden worden)-->
 				<a href="index.html">Cadeaus voor kinderen</a>
 			</li>
 			<li>
-				<img src="../images/beigerugtas.png" alt="beige rugzak">
+				<img src="./images/beigerugtas.png" alt="beige rugzak">
 				<!--boven img (nog gevonden worden)-->
 				<a href="index.html">Een leuk cadeau</a>
 			</li>
@@ -200,13 +200,13 @@
 				<section>
 					<h4>Volg The North Face</h4>
 					<ul>
-						<li><a href="https://www.facebook.com/thenorthface/"><img src="../images/facebook-icon.png"
+						<li><a href="https://www.facebook.com/thenorthface/"><img src="./images/facebook-icon.png"
 									alt="Winkelwagen"></a></li>
-						<li><a href="https://www.instagram.com/thenorthface/"><img src="../images/instagram-icon.png"
+						<li><a href="https://www.instagram.com/thenorthface/"><img src="./images/instagram-icon.png"
 									alt="Winkelwagen"></a></li>
-						<li><a href="https://x.com/TheNorthFace?mx=2"><img src="../images/twitter-icon.png"
+						<li><a href="https://x.com/TheNorthFace?mx=2"><img src="./images/twitter-icon.png"
 									alt="Winkelwagen"></a></li>
-						<li><a href="https://www.youtube.com/c/TheNorthFace"><img src="../images/youtube-icon.png"
+						<li><a href="https://www.youtube.com/c/TheNorthFace"><img src="./images/youtube-icon.png"
 									alt="Winkelwagen"></a></li>
 					</ul>
 				</section>
