--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
 		<section>
 			<h2>Geef exploratie cadeau</h2>
 			<a href="#">
-				<video autoplay loop>
+				<video autoplay muted loop>
 					<source src="./images/mainbannerfilmpjeklein.webm" type="video/webm">
+				  </video>
+				<video autoplay muted loop>
+					<source src="./images/mainbannerfilmpje.webm" type="video/webm">
 				  </video>
 			</a>
 			<a href="#">Gids voor cadeaushoppen</a>
