--- a/about.html
+++ b/about.html
@@ -8,14 +8,13 @@
 
 	<title>The North Face</title>
 
-	<link href="./styles/style.css" rel="stylesheet">
+	<link href="./styles/style2.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="./images/The-North-Face-Logo-Geen-Naam.png">
 </head>
 
 <body>
 	<header>
 		<h1 class="verborgen-h1">TheNorthFace</h1>
-		<button aria-label="Toggle menu">☰</button>
 		<nav>
 			<ul>
 				<li><a href="#"><img src="./images/nederlandicon.png" alt="Nederlandse-vlag">NL</a></li>
@@ -30,7 +29,7 @@
 			<!--bovenste nav-->
 			<section>
 				<ul>
-					<li><a href="about.html"><img src="./images/The-North-Face-Logo-wit.png" alt="TheNorthFace-Logo"></a></li>
+					<li><a href="index.html"><img src="./images/The-North-Face-Logo-wit.png" alt="TheNorthFace-Logo"></a></li>
 					<li><a href="#">Heren</a></li>
 					<li><a href="#">Dames</a></li>
 					<li><a href="#">Kinderen</a></li>
@@ -48,18 +47,7 @@
 						</label></form>
 					</li>
 					<li><a href="#">
-						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewbox="0 0 512 512" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" xmlns:xlink="http://www.w3.org/1999/xlink">
-							<g><path style="opacity:0.966"  d="M 193.5,-0.5 C 207.5,-0.5 221.5,-0.5 235.5,-0.5C 308.689,8.32575 364.522,43.9924 403,106.5C 435.153,166.31 439.153,227.977 415,291.5C 405.091,314.335 391.925,335.002 375.5,353.5C 419.82,397.654 464.32,441.654 509,485.5C 509.608,487.066 510.442,488.4 511.5,489.5C 511.5,493.167 511.5,496.833 511.5,500.5C 509.5,505.833 505.833,509.5 500.5,511.5C 496.833,511.5 493.167,511.5 489.5,511.5C 487.432,510.625 485.432,509.459 483.5,508C 439.319,464.319 394.986,420.819 350.5,377.5C 282.283,426.887 208.616,436.72 129.5,407C 54.4137,371.984 11.0803,313.484 -0.5,231.5C -0.5,218.167 -0.5,204.833 -0.5,191.5C 9.96358,113.211 50.2969,56.0447 120.5,20C 143.953,9.55721 168.286,2.72387 193.5,-0.5 Z M 207.5,32.5 C 273.306,32.3207 325.806,58.3207 365,110.5C 399.558,163.741 405.558,220.074 383,279.5C 357.534,335.834 314.701,371.334 254.5,386C 191.936,397.947 136.936,382.947 89.5,341C 34.8688,284.958 20.3688,219.791 46,145.5C 71.2018,87.9705 114.368,51.8039 175.5,37C 186.231,34.8714 196.897,33.3714 207.5,32.5 Z"/></g>
-							</svg>
-					</a></li>
-					<li><a href="#"><img src="./images/shopping-bag.svg" alt="Winkelwagen icoon"></a></li>
-					<li><button aria-hidden="true"><img src="https://assets.codepen.io/274456/ui-icon-hamburger.svg" alt="hamburger_menu" /></button></li>
-				</ul>
-			</section>
-			<section>
-				<ul>
-					<li><a href="about.html"><img src="./images/The-North-Face-Logo-wit.png" alt="TheNorthFace-Logo"></a></li>
-					<li><a href="#">
+						<!-- <img src="./images/zoek-icon.svg" alt="zoek icoon"> -->
 						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewbox="0 0 512 512" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<g><path style="opacity:0.966"  d="M 193.5,-0.5 C 207.5,-0.5 221.5,-0.5 235.5,-0.5C 308.689,8.32575 364.522,43.9924 403,106.5C 435.153,166.31 439.153,227.977 415,291.5C 405.091,314.335 391.925,335.002 375.5,353.5C 419.82,397.654 464.32,441.654 509,485.5C 509.608,487.066 510.442,488.4 511.5,489.5C 511.5,493.167 511.5,496.833 511.5,500.5C 509.5,505.833 505.833,509.5 500.5,511.5C 496.833,511.5 493.167,511.5 489.5,511.5C 487.432,510.625 485.432,509.459 483.5,508C 439.319,464.319 394.986,420.819 350.5,377.5C 282.283,426.887 208.616,436.72 129.5,407C 54.4137,371.984 11.0803,313.484 -0.5,231.5C -0.5,218.167 -0.5,204.833 -0.5,191.5C 9.96358,113.211 50.2969,56.0447 120.5,20C 143.953,9.55721 168.286,2.72387 193.5,-0.5 Z M 207.5,32.5 C 273.306,32.3207 325.806,58.3207 365,110.5C 399.558,163.741 405.558,220.074 383,279.5C 357.534,335.834 314.701,371.334 254.5,386C 191.936,397.947 136.936,382.947 89.5,341C 34.8688,284.958 20.3688,219.791 46,145.5C 71.2018,87.9705 114.368,51.8039 175.5,37C 186.231,34.8714 196.897,33.3714 207.5,32.5 Z"/></g>
 							</svg>
@@ -72,54 +60,55 @@
 	</header>
 	<main>
 		<section>
-			<h2>Maak je klaar voor de pistes.</h2>
-
-				<img src="./images/roze_jas_main_lil.png" alt="mensen_in_jassen_in_de_sneeuw">
-
-			<a href="#">Shop heren</a>
-			<a href="#">Shop dames</a>
+			<h2>Vormgeven aan de toekomst van de mens/natuur.</h2>
+			<p>Exploratie is onze zuurstof. Het vormt ons, waar we voor staan en waar we naar streven. Omdat verkennen ook vooruitgang betekent. Om de wereld achter de kaart te zien en te bedenken wat ieder van ons kan bereiken. Sinds 1966 hebben we continu nieuwe manieren verkend om het verschil te maken voor elkaar en onze planeet.</p>
+			<a href="#">
+				<img src="./images/about_berg_main_lil.png" alt="mensen_in_jassen_in_de_sneeuw">
+			</a>
 		</section>
-
-		<section>
-			<h2>Nieuw jaar, nieuwe rugzak.</h2>
-
-					<img src="./images/blauwe_hiker_main_lil.png" alt="hiker_met_blauwe_jas">
-
-				<a href="#">Shop heren</a>
-				<a href="#">Shop dames</a>
-		</section>
-
-		<section>
-				<h3>Jassen voor alle weertypes en eindeloze tochten.</h3>
-
-				<img src="./images/bril_hiker.png" alt="hiker_met_bril_op">
-				<a href="#">Shop heren</a>
-				<a href="#">Shop dames</a>
-			</section>
-			<section>
-				<h3>Casual essentials voor avontuur.</h3>
-
-				<img src="./images/witte_trui.png" alt="vrouw_met_witte_jas">
-				<a href="#"><p>Shop heren</p></a>
-				<a href="#"><p>Shop dames</p></a>
-			</section>
 
 		<ul>
 			<li>
-				<img src="./images/blauwe_dame_port.png" alt="dame_met_blauwe_jas">
-				<a href="#"><p>Nieuwe isolerende items voor dames</p></a>
+				<a href="#">
+				<img src="./images/vintage_rode_tas.png" alt="dame_met_blauwe_jas">
+				<h4>Onze reis.</h4></a>
+				<p>Dwars door de decennia. Achter de kaart. Onze geschiedenis is een reis die nooit stopt.</p>
+				<a href="#">Onderneem een reis</a>
 			</li>
 			<li>
-				<img src="./images/blauwe_heer_port.png" alt="heer_met_blauwe_jas">
-				<a href="#"><p>Nieuwe isolerende items voor heren</p></a>
+				<a href="#">
+				<img src="./images/bos_verkennen.png" alt="heer_met_blauwe_jas">
+				<h4>Duurzaam-bewust van binnen en buiten.</h4></a>
+				<p>We zijn vastbesloten de beste producten op aarde te maken, gericht op community's, de natuur en de toekomst.</p>
+				<a href="#">Verken onze engagementen</a>
 			</li>
 			<li>
-				<img src="./images/blauwe_kind_port.png" alt="kind_met_blauwe_jas">
-				<a href="#"><p>Nieuwe isolerende items voor kinderen</p></a>
+				<a href="#">
+				<img src="./images/basecamp.png" alt="kind_met_blauwe_jas">
+				<h4>Basecamp</h4></a>
+				<p>Kom naar onze events in de hoge bergen.</p>
+				<a href="#">Kom naar onze events</a>
 			</li>
 			<li>
-				<img src="./images/golf_dame_port.png" alt="dame_met_assesoires">
-				<a href="#"><p>Nieuwe Accessoires</p></a>
+				<a href="#">
+				<img src="./images/xplr_pass_logo.png" alt="dame_met_assesoires">
+				<h4>Ons programma alleen voor leden.</h4></a>
+				<p>Kom bij de community die nooit stopt met verkennen.</p>
+				<a href="#">Doe nu mee</a>
+			</li>
+			<li>
+				<a href="#">
+				<img src="./images/atleet.png" alt="kind_met_blauwe_jas">
+				<h4>Succesverhalen.</h4></a>
+				<p>De verhalen van onze atleten zijn anders, maar ze delen allemaal een roep naar het verleggen van de grenzen van het menselijk kunnen.</p>
+				<a href="#">Dit zijn de atleten</a>
+			</li>
+			<li>
+				<a href="#">
+				<img src="./images/about_sneeuw_berg.png" alt="dame_met_assesoires">
+				<h4>Our pro programme.</h4></a>
+				<p>We weten dat industrie pro's inspireren. Ontdek de voordelen van ons programma voor leden voor outdoor professionals.</p>
+				<a href="#">Doe nu mee</a>
 			</li>
 		</ul>
 	</main>
@@ -133,7 +122,7 @@
 		</ul>
 		<section>
 		<ul>
-			<li><h3>WINKELEN</h3></li>
+			<li><a href="#"><h3>WINKELEN</h3></a></li>
 			<li><a href="#">Heren</a></li>
 			<li><a href="#">Dames</a></li>
 			<li><a href="#">Kids</a></li>
@@ -141,14 +130,14 @@
 			<li><a href="#">Schoenen</a></li>
 		</ul>
 		<ul>
-			<li><h3>BESTELLINGEN</h3></li>
+			<li><a href="#"><h3>BESTELLINGEN</h3></a></li>
 			<li><a href="#">Track jouw Order</a></li>
 			<li><a href="#">Verzending</a></li>
 			<li><a href="#">Retourneren</a></li>
 			<li><a href="#">Korting voor studenten</a></li>
 		</ul>
 		<ul>
-			<li><h3>HELP</h3></li>
+			<li><a href="#"><h3>HELP</h3></a></li>
 			<li><a href="#">Contact</a></li>
 			<li><a href="#">Veelgestelde Vragen</a></li>
 			<li><a href="#">Garantie</a></li>
@@ -159,7 +148,7 @@
 			<li><a href="#">Conformiteitsverklaring</a></li>
 		</ul>
 		<ul>
-			<li><h3>OVER ONS</h3></li>
+			<li><a href="#"><h3>OVER ONS</h3></a></li>
 			<li><a href="#">Onze Geschiedenis</a></li>
 			<li><a href="#">Duurzaamheid</a></li>
 			<li><a href="#">Sporters</a></li>
@@ -182,7 +171,7 @@
 					</form>
 					<label for="terms">
 						<input type="checkbox" id="terms" value="terms">
-						Ik bevestig dat ik het privacybeleid heb gelezen en begrepen en ik geef
+						Ik bevestig dat ik het <a href="#">privacybeleid</a> heb gelezen en begrepen en ik geef
 						toestemming voor de verwerking van mijn persoonlijke gegevens voor marketing- en
 						profileringsdoeleinden.*
 					</label>
